# gcolor3

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  PKGBUILD  README.md  aclocal.m4  autogen.sh  callbacks.c  color-picker.doap  common.mk  configure  configure.ac  gcolor3.c  gcolor3.h  meson.build  meson_install.sh  nl.hjdskes.gcolor3.json  org.hjdskes.gcolor3.json  org.unia.gcolor3.json  ui.h
data/: Makefile.am  color-row.ui  gcolor3-app-menu.ui  gcolor3-marshalers.list  gcolor3-window.ui  gcolor3.1  gcolor3.appdata.xml.in  gcolor3.desktop  gcolor3.desktop.in  gcolor3.desktop.in.in  gcolor3.gresource.xml  menus.ui  meson.build  nl.hjdskes.gcolor3.appdata.xml.in  nl.hjdskes.gcolor3.desktop.in  org.hjdskes.gcolor3.appdata.xml.in  org.hjdskes.gcolor3.desktop.in  org.hjdskes.gcolor3.desktop.in.in  shortcuts.ui  window.ui
data/icons/: Makefile.am
man/: gcolor3.1
po/: ChangeLog  Gcolor3.pot  LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  de_DE.mo  de_DE.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  hi.po  hr.po  hu.po  id.mo  id.po  it.po  ka.po  nb.po  nb_NO.po  nl.po  no.po  oc.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  (+2 more)
source/: Makefile  Makefile.am  callbacks.c  gcolor3.c  ui.c
src/: Makefile.am  callbacks.c  callbacks.h  gcolor3-application.c  gcolor3-application.h  gcolor3-color-item.c  gcolor3-color-item.h  gcolor3-color-row.c  gcolor3-color-row.h  gcolor3-color-selection.c  gcolor3-color-selection.h  gcolor3-color-store.c  gcolor3-color-store.h  gcolor3-hsv.c  gcolor3-hsv.h  gcolor3-window.c  gcolor3-window.h  gcolor3.gresource.xml  gcolor3.h  main.c  meson.build  ui.c  ui.h  utils.c  utils.h
subprojects/: libportal.wrap
