SUBDIRS = \
	data \
	po \
	src

EXTRA_DIST = \
	${srcdir}/AUTHORS \
	${srcdir}/LICENSE \
	${srcdir}/README.md

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge \
	intltool-update

MAINTAINERCLEANFILES = \
	${srcdir}/aclocal.m4 \
	${srcdir}/compile \
	${srcdir}/config.guess \
	${srcdir}/config.h.in \
	${srcdir}/config.h.in~ \
	${srcdir}/config.log \
	${srcdir}/config.status \
	${srcdir}/config.sub \
	${srcdir}/depcomp \
	${srcdir}/gtk-doc.make \
	${srcdir}/install-sh \
	${srcdir}/libtool \
	${srcdir}/ltmain.sh \
	${srcdir}/missing \
	${srcdir}/mkinstalldirs \
	${srcdir}/stamp-h1

