# The name of the program to be compiled.
# The "bin" prefix will install it in the "bin" directory.
# The "PROGRAMS" suffix marks it as a program to be compiled.
bin_PROGRAMS = gcolor3

# A list of all of the source code files.
# The "SOURCES" suffix marks it as source code.
gcolor3_SOURCES = \
callbacks.c \
callbacks.h \
ui.c \
ui.h \
gcolor3.c \
gcolor3.h
